<resources>
    <string name="app_name">googleClone</string>
    <string name="google_icon">Google Icon</string>
    <string name="create_your_google_account">Create your Google Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="you_can_use_letters_numbers_amp_periods"><![CDATA[You can use letters, numbers & periods]]></string>
    <string name="use_my_current_email_address_instead">Use my current email address instead</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="use_8_more_characters_with_a_mix_of_letters_numbers_amp_symbols"><![CDATA[Use 8 more characters with a mix of letters, numbers & symbols]]></string>
    <string name="show_password">Show password</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="next">Next</string>
    <string name="gmail_com">\@gmail.com</string>
</resources>